--- a/index.html
+++ b/index.html
@@ -3,28 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>Quack-Man</title>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/reset.css">
+
   </head>
-  <body>
+  <body class="body">
     <section class="body-container">
-      <header class="title">Quack-Man</header>
+      <header class="header">
+        <span class="title">Quack-Man</span>
+        <div>by Tom Hansen</div>
+      </header>
 
       <section class="mid-row">
-        <ul class="instructions">
+        <ul class="list">
           <li>Instructions</li>
           <li>Click anywhere on the board to start</li>
           <li>Use the arrow keys to change directions</li>
           <li>Press S to toggle sound</li>
-        </div>
+        </ul>
 
         <div class="game-board">
-
+          <canvas id="canvas"></canvas>
         </div>
 
-        <div class="personal-info">
-
-        </div>
+        <ul class="list">
+          <li>Contact</li>
+          <li>
+            <a href="https://github.com/thansen29/Quack-Man">Git</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/thomas-hansen-1a0a51132/">LinkedIn</a>
+          </li>
+          <li>
+            <a href="#">Website</a>
+          </li>
+        </ul>
       </section>
 
     </section>
