--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Quack-Man</title>
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
+    <script type="application/javascript" src="bundle.js"></script>
 
   </head>
   <body class="body">
@@ -23,7 +24,9 @@
         </ul>
 
         <div class="game-board">
-          <canvas id="canvas"></canvas>
+          <canvas id="canvas">
+          </canvas>
+            <!-- <div class="duck"><img src="./assets/duck.png" /></div> -->
         </div>
 
         <ul class="list">
@@ -41,5 +44,6 @@
       </section>
 
     </section>
+
   </body>
 </html>
