score is displayed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
     <script type="application/javascript" src="bundle.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" charset="utf-8"></script>
 
   </head>
   <body class="body">
@@ -26,6 +27,11 @@
         <div class="game-board">
           <canvas id="canvas">
           </canvas>
+          <div class="stats">
+            <span class="score"></span>
+            <span class="lives"></span>
+            <span class="level"></span>
+          </div>
             <!-- <div class="duck"><img src="./assets/duck.png" /></div> -->
         </div>
 
