game only starts on click

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <section class="mid-row">
         <ul class="list">
           <li>Instructions</li>
-          <li>Click anywhere on the board to start</li>
+          <li>Click anywhere to start</li>
           <li>Use the arrow keys to change directions</li>
           <li>Press S to toggle sound</li>
         </ul>
