removed click start after game start

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </ul>
 
         <div class="game-board">
+          <!-- <div class="intro">Click anywhere to start the game</div> -->
           <canvas id="canvas">
           </canvas>
           <div class="stats">
