intro music added

--- a/index.html
+++ b/index.html
@@ -52,5 +52,10 @@
 
     </section>
 
+    <audio controls id="intro" loop>
+      <source src="assets/pacman_beginning.wav" type="audio/wav">
+
+    </audio>
+
   </body>
 </html>
