pause works, added extra instructions

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
           <li>Click anywhere to start</li>
           <li>Use the arrow keys to change directions</li>
           <li>Press S to toggle sound</li>
+          <li>Press Space to pause</li>
+          <li>Press R to restart</li>
         </ul>
 
         <div class="game-board">
