--- a/index.html
+++ b/index.html
@@ -56,7 +56,18 @@
 
     <audio controls id="intro" loop>
       <source src="assets/pacman_beginning.wav" type="audio/wav">
+    </audio>
 
+    <audio controls id="death">
+      <source src="assets/pacman_death.wav" type="audio/wav">
+    </audio>
+
+    <audio controls id="eatghost">
+      <source src="assets/pacman_eatghost.wav" type="audio/wav">
+    </audio>
+
+    <audio controls id="chomp">
+      <source src="assets/pacman_chomp.wav" type="audio/wav">
     </audio>
 
   </body>
