all sounds plays properly depending on muted status

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
     </section>
 
     <audio controls id="intro" loop>
-      <source src="assets/pacman_beginning.wav" type="audio/wav">
+      <source src="assets/audio/pacman_beginning.wav" type="audio/wav">
     </audio>
 
     <audio controls id="death">
-      <source src="assets/pacman_death.wav" type="audio/wav">
+      <source src="assets/audio/pacman_death.wav" type="audio/wav">
     </audio>
 
     <audio controls id="eatghost">
-      <source src="assets/pacman_eatghost.wav" type="audio/wav">
+      <source src="assets/audio/pacman_eatghost.wav" type="audio/wav">
     </audio>
 
     <audio controls id="chomp">
-      <source src="assets/pacman_chomp.wav" type="audio/wav">
+      <source src="assets/audio/pacman_chomp.wav" type="audio/wav">
     </audio>
 
   </body>
