removed a handler, testing ghost move

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="https://www.linkedin.com/in/thomas-hansen-1a0a51132/">LinkedIn</a>
           </li>
           <li>
-            <a href="#">Website</a>
+            <a href="http://www.tomhansen.io/">Website</a>
           </li>
         </ul>
       </section>
