ghosts moving outside the grid

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Quack-Man</title>
+    <link rel="shortcut icon" href="assets/favicon.png">
+
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
     <script type="application/javascript" src="bundle.js"></script>
