high scores work properly

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </header>
 
       <section class="mid-row">
-        <ul class="list">
+        <ul class="list instruct">
           <li>Instructions</li>
           <li>Click anywhere to start</li>
           <li>Use the arrow keys to change directions</li>
@@ -31,9 +31,6 @@
 
         <div class="name-container">
           <h2>Please input your initials</h2>
-          <div>
-            *tip press tab to focus instead of clicking*
-          </div>
           <input tabIndex="1" class="name-input" type="text" value="" maxlength="3">
         </div>
 
@@ -47,14 +44,10 @@
           </div>
         </div>
 
-        <ul class="list">
-          <li>High Scores</li>
-          <li>score2</li>
-          <li>score3</li>
-          <li>score4</li>
+        <ul class="list highscores">
+          <div>High Scores</div>
         </ul>
 
-        <!-- put high scores -->
       </section>
       <ul class="links">
         <li>
